First Model-Controller-View - Department

--- a/SalesWebMvc/Views/Home/About.cshtml
+++ b/SalesWebMvc/Views/Home/About.cshtml
@@ -6,6 +6,6 @@
 
 <p>Aluno(a): @ViewData["Aluno"] </p>
 <address>
-    <strong> Para mais informações: </strong><a href="https://github.com/Jennifer-Maia">github.com/</a>
+    <strong> Para mais informações: </strong><a href="https://github.com/Jennifer-Maia">github.com</a>
 </address>
 
