--- a/SalesWebMvc/Views/Sellers/Edit.cshtml
+++ b/SalesWebMvc/Views/Sellers/Edit.cshtml
@@ -11,22 +11,30 @@
     <!--Garante que ocupe a larg da tela-->
     <div class="col-md-4">
         <form asp-action="Edit">
-            <input type ="hidden" asp-for="Seller.Id"/> <!--Campo oculto com Id do vendedor-->
+            <input type="hidden" asp-for="Seller.Id" /> <!--Campo oculto com Id do vendedor-->
             <!--Formulário-->
             <div class="form-group">
                 <label asp-for="Seller.Name" class="control-label"></label>
                 <input asp-for="Seller.Name" class="form-control" />
+                <span asp-validation-for="Seller.Name" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="Seller.Email" class="control-label"></label>
                 <input asp-for="Seller.Email" class="form-control" />
+                <span asp-validation-for="Seller.Email" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="Seller.BirthDate" class="control-label"></label>
                 <input asp-for="Seller.BirthDate" class="form-control" />
+                <span asp-validation-for="Seller.BirthDate" class="text-danger"></span>
+
             </div>           <div class="form-group">
                 <label asp-for="Seller.BaseSalary" class="control-label"></label>
                 <input asp-for="Seller.BaseSalary" class="form-control" />
+                <span asp-validation-for="Seller.BaseSalary" class="text-danger"></span>
+
             </div>
             <div class="form-group">
                 <label asp-for="Seller.DepartmentId" class="control-label"></label>
@@ -40,5 +48,9 @@
     </div>
 
 </div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
 
 
